fixed text wrap on messaging

--- a/src/styles.css
+++ b/src/styles.css
@@ -530,27 +530,33 @@ ul.menu__links li a {
   align-items: flex-start;
   margin-bottom: 20px;
 }
+
 .chat-bubble.right {
   margin-left: auto;
   border-radius: 20px 20px 0 20px;
   background-color: var(--background-secondary);
   /* box-shadow: -2px 2px 1px 1px #88dded; */
 }
+
 .chat-bubble__left {
   width: 35px;
   height: 35px;
   border-radius: 50%;
   margin-right: 10px;
 }
+
 .user-name {
   font-weight: bold;
   margin-bottom: 5px;
   font-size: 0.9rem;
   color: var(--background);
 }
+
 .user-message {
-  word-break: break-all;
+  word-wrap: break-word;
+  /* word-break: break-all; */
 }
+
 .message-time {
   display: block;
   text-align: right;
